--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,9 @@
 {
     "files.associations": {
         "Ctempconversion.C": "cpp",
-        "Circle.C": "cpp"
+        "Circle.C": "cpp",
+        "Classwork 9-8-29.C": "cpp",
+        "Classwork 9820.C": "cpp",
+        "Classwork 9820-91020.C": "cpp"
     }
 }
