--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,8 @@
         "Circle.C": "cpp",
         "Classwork 9-8-29.C": "cpp",
         "Classwork 9820.C": "cpp",
-        "Classwork 9820-91020.C": "cpp"
+        "Classwork 9820-91020.C": "cpp",
+        "NumericPalindrome.C": "cpp",
+        "tempCodeRunnerFile.C": "cpp"
     }
 }
