classwork for arrays and today's class

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,8 @@
         "Classwork 9820.C": "cpp",
         "Classwork 9820-91020.C": "cpp",
         "NumericPalindrome.C": "cpp",
-        "tempCodeRunnerFile.C": "cpp"
+        "tempCodeRunnerFile.C": "cpp",
+        "Classwork 9-22 9-24.C": "cpp",
+        "Classwork922-924.C": "cpp"
     }
 }
