--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -42,6 +42,10 @@
         "xstddef": "cpp",
         "xstring": "cpp",
         "xtr1common": "cpp",
-        "xutility": "cpp"
-    }
+        "xutility": "cpp",
+        "string": "cpp",
+        "tuple": "cpp",
+        "sstream": "cpp"
+    },
+    "C_Cpp.errorSquiggles": "Disabled"
 }
